[CAP-1153] Negative balance recovery
Approved-by: Craig Miller
Approved-by: jim.scarborough